[gd_scene load_steps=9 format=3 uid="uid://bmwseob8yf20s"]

[ext_resource type="Script" uid="uid://ndu688dmwy5s" path="res://src/scenes/buildings/gun_turret.gd" id="1_es320"]
[ext_resource type="Texture2D" uid="uid://bps65f6milxa6" path="res://assets/sprites/buildings/cannon_base.png" id="2_5w6a5"]
[ext_resource type="Texture2D" uid="uid://xff7wxw325w3" path="res://assets/sprites/buildings/cannon_turret.png" id="3_b5r10"]
[ext_resource type="PackedScene" uid="uid://youcdqrug5xc" path="res://src/scenes/components/building_hurt_box.tscn" id="4_dgy6q"]
[ext_resource type="Texture2D" uid="uid://c8e1wx4o47i3l" path="res://assets/sprites/icons/exclamation_mark.png" id="4_rafxf"]
[ext_resource type="PackedScene" uid="uid://d0ajmo65lf84p" path="res://src/scenes/components/ammo_stock_bar.tscn" id="5_5w6a5"]
[ext_resource type="PackedScene" uid="uid://byoxxaj5dc11u" path="res://src/scenes/components/construction_progress_bar.tscn" id="6_b5r10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3m2l5"]
size = Vector2(14, 14)

[node name="GunTurret" type="Node2D"]
script = ExtResource("1_es320")
building_type = 4

[node name="BaseSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_5w6a5")

[node name="TurretSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_b5r10")

[node name="ExclamationMarkSprite" type="Sprite2D" parent="."]
position = Vector2(-11, -16)
texture = ExtResource("4_rafxf")

[node name="BuildingHurtBox" parent="." instance=ExtResource("4_dgy6q")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingHurtBox"]
shape = SubResource("RectangleShape2D_3m2l5")

[node name="AmmoStockBar" parent="." instance=ExtResource("5_5w6a5")]
offset_left = -8.0
offset_right = 8.0

[node name="ConstructionProgressBar" parent="." instance=ExtResource("6_b5r10")]
offset_left = -8.0
offset_right = 8.0
